# DiegeticMemorySociety

./: .gitignore  README.md  RESEARCH_PLAN.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: ARCHITECTURE.md  EVALUATION_DESIGN.md  HANDOFF_20260603_social_simulation_writing_benchmark.md  RETRIEVAL_DESIGN.md  SOCIAL_SIMULATION_DESIGN.md  SOCIAL_SIMULATION_PAPER_REFERENCES.md  SOCIAL_SIMULATION_RESEARCH.md  TIMELINE_DESIGN.md  external_references_usage.md  mirofish_reuse_notes_20260529.md
scripts/: run_full_benchmark.sh
src/dms/: cli.py  (+16 more)
tests/: helpers.py  test_author_context.py  test_canonical_memory.py  test_chunking.py  test_cli_model_overrides.py  test_cli_mvp_pipeline.py  test_cli_scene_ordered_pipeline.py  test_config.py  test_context_kernel.py  test_context_kernel_cli.py  test_entity_attribute_cards.py  test_entity_resolution.py  test_episodic_memory.py  test_external_references.py  test_fastapi_service.py  test_gradio_app.py  test_intent_levels.py  test_json_output_parser.py  test_kg_entity_memory.py  test_kg_entity_runner.py  test_llm_clients.py  test_memory_timeline_index.py  test_narrative_units.py  test_prefix_commits.py  test_prefix_world_model.py  test_progress.py  test_prompt_loader.py  test_reference_library.py  test_relationship_memory.py  test_scene_disposition_notes.py  test_scene_eligibility.py  test_scene_event_memory.py  test_scene_event_runner.py  test_scene_inventory_memory.py  test_scene_inventory_runner.py  test_scene_ordered_pipeline.py  test_scene_summary_memory.py  test_scene_summary_runner.py  test_script_adapter.py  (+12 more)
(+125 files in other folders)
