[project]
name = "diegetic-memory-society"
version = "0.1.0"
description = "Timeline-constrained memory-as-agent-society framework for long-form narrative writing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "json-repair>=0.39.0",
  "langchain-text-splitters>=0.3.8",
  "python-docx>=1.1.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
service = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
dms = "dms.cli:main"
dms-service = "dms.service.fastapi_app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
